@startuml Week6RefactoredArchitecture

!theme plain
skinparam backgroundColor #FFFFFF
skinparam class {
    BackgroundColor #E8F4FD
    BorderColor #2E86AB
    ArrowColor #2E86AB
}

package "main.java.smells" {
    class OrderManagerGod {
        +process(recipe, qty, paymentType, discountCode, printReceipt): String
        -createDependencies(): void
    }
}

package "main.java.order" {
    class CheckoutService {
        -factory: ProductFactory
        -pricing: PricingService
        -printer: ReceiptPrinter
        -paymentFactory: PaymentStrategyFactory
        -taxPercent: int
        +checkout(recipe, qty, paymentType, discountCode, printReceipt): String
        -calculateDiscount(subtotal, discountCode): Money
    }
}

package "main.java.factory" {
    class ProductFactory {
        +create(recipe): Product
    }
}

package "main.java.catalog" {
    interface Product {
        +basePrice(): Money
    }
    class SimpleProduct {
        +basePrice(): Money
    }
}

package "main.java.decorators" {
    interface Priced {
        +price(): Money
    }
    class ProductDecorator {
        +price(): Money
    }
}

package "main.java.pricing" {
    interface DiscountPolicy {
        +discountOf(subtotal): Money
    }
    
    class NoDiscountPolicy {
        +discountOf(subtotal): Money
    }
    
    interface TaxPolicy {
        +taxOn(amount): Money
    }
    
    class FixedRateTaxPolicy {
        -percent: int
        +taxOn(amount): Money
        +getPercent(): int
    }
    
    class PricingService {
        -discountPolicy: DiscountPolicy
        -taxPolicy: TaxPolicy
        +price(subtotal): PricingResult
        +getTaxPolicy(): TaxPolicy
    }
    
    class ReceiptPrinter {
        +format(recipe, qty, result, taxPercent): String
        +print(receipt): void
    }
    
    class PricingResult {
        +subtotal: Money
        +discount: Money
        +tax: Money
        +total: Money
    }
}

package "main.java.payment" {
    interface PaymentStrategy {
        +pay(order): void
    }
    
    class CashPayment {
        +pay(order): void
    }
    
    class CardPayment {
        +pay(order): void
    }
    
    class WalletPayment {
        +pay(order): void
    }
    
    interface PaymentStrategyFactory {
        +fromType(paymentType): PaymentStrategy
    }
    
    class DefaultPaymentStrategyFactory {
        +fromType(paymentType): PaymentStrategy
    }
}

package "main.java.order" {
    class Money {
        +asBigDecimal(): BigDecimal
        +add(other): Money
        +subtract(other): Money
        +multiply(qty): Money
        +zero(): Money
    }
    
    class Order {
        -qty: int
    }
}

' Relationships
OrderManagerGod --> CheckoutService : delegates to
CheckoutService --> ProductFactory : uses
CheckoutService --> PricingService : uses
CheckoutService --> ReceiptPrinter : uses
CheckoutService --> PaymentStrategyFactory : uses

ProductFactory --> Product : creates
Product <|-- SimpleProduct
Product <|-- ProductDecorator
ProductDecorator ..|> Priced

PricingService --> DiscountPolicy : uses
PricingService --> TaxPolicy : uses
PricingService --> PricingResult : creates

DiscountPolicy <|.. NoDiscountPolicy
TaxPolicy <|.. FixedRateTaxPolicy

PaymentStrategyFactory <|.. DefaultPaymentStrategyFactory
PaymentStrategy <|.. CashPayment
PaymentStrategy <|.. CardPayment
PaymentStrategy <|.. WalletPayment

DefaultPaymentStrategyFactory --> PaymentStrategy : creates

CheckoutService --> Money : uses
CheckoutService --> Order : creates
PaymentStrategy --> Order : processes

ReceiptPrinter --> PricingResult : formats
ReceiptPrinter --> Money : uses

' Dependency Injection arrows
CheckoutService ..> ProductFactory : injected
CheckoutService ..> PricingService : injected
CheckoutService ..> ReceiptPrinter : injected
CheckoutService ..> PaymentStrategyFactory : injected

note right of CheckoutService
  Orchestrates the entire checkout flow
  - Creates products via ProductFactory
  - Calculates pricing via PricingService
  - Formats receipts via ReceiptPrinter
  - Processes payments via PaymentStrategy
end note

note right of PricingService
  Handles pricing logic
  - Uses DiscountPolicy for discounts
  - Uses TaxPolicy for tax calculation
  - Returns complete PricingResult
end note

note bottom of OrderManagerGod
  Legacy facade that delegates to CheckoutService
  Maintains backward compatibility for tests
end note

@enduml


